<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/componentLineChart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/surface_dark"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp"
        android:visibility="invisible"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/linearLayoutInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <TextView
                android:id="@+id/textViewProduct1"
                style="@style/caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/ic_product_chart1"
                android:text="@string/_2_5" />

            <TextView
                android:id="@+id/textViewProduct2"
                style="@style/caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/ic_product_chart2"
                android:text="@string/_8_53" />

            <TextView
                android:id="@+id/textViewProduct3"
                style="@style/caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/ic_product_chart3"
                android:text="@string/_10" />

            <TextView
                android:id="@+id/textViewDate"
                style="@style/caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:textColor="@color/onsurface_mediumemphasis"
                android:text="@string/_20_jan_2020" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:visibility="invisible"
        tools:visibility="visible" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/primary_800"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorHeight="2dp"
        app:tabMaxWidth="0dp"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/primary_800"
        app:tabTextAppearance="@style/caption"
        app:tabTextColor="@color/onsurface_disabled"
        tools:visibility="visible">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_1w" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_1m" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_1y" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_3y" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_5y" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_10y" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/all" />
    </com.google.android.material.tabs.TabLayout>

</LinearLayout>